--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,22 @@ body {
   background-color: #313131;
 }
 
+.ant-btn-primary {
+  background-color: #1e1e1e;
+  border-color: #1e1e1e;
+  color: #fff;
+}
+
+.ant-btn-default {
+  background-color: #CE4422;
+  border-color: #CE4422;
+  color: #fff;
+}
+
+.para {
+  color: #fff;
+}
+
 /* Header */
 
 header {
@@ -82,4 +98,19 @@ main {
   font-weight: 400;
   text-align: center;
   margin-bottom: 2rem;
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5rem 10rem;
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
